--- a/Tesi pf/content.tex
+++ b/Tesi pf/content.tex
@@ -1,3 +1,4 @@
+% !TeX root = main.tex
 % !TeX spellcheck = it_IT
 \frontmatter
 \setcounter{page}{1}
@@ -30,7 +31,7 @@ Alla Juilliard Bley riceve un'educazione di impostazione moderna, soprattutto in
 \begin{fquote}
 	Il grande mistero non era se sarebbe arrivata la musica atonale, ma bensì \textit{perchè non fosse ancora arrivata}. [...] A questo riguardo la musica classica ci aveva portati fuori strada, poiché ci aveva spinti a credere che questa svolta sarebbe stata compiuta dai compositori. Nel jazz [...] un compositore è semplicemente qualcuno che non sa suonare in tempo reale.\footcite[24]{stopping}
 \end{fquote}
-L'atonalità esercitò da subito il proprio fascino su Bley così come su altri musicisti della scuola (come Gil Evans, George Russell e Johnny Carisi che il pianista ebbe modo di conoscere). Alla Juilliard Bley si unì alla \textit{New Jazz Society}, che si riuniva al Downbeat Club dove erano soliti suonare Parker e Charles Mingus. Quest'ultimo, in particolare, fece la conoscenza di Bley proprio in queste occasioni.\\
+L'atonalità e l'avanguardia, anche attraverso gli insegnamenti del compositore canadese Henry Brant\footcite[23]{stopping} esercitò da subito il proprio fascino su Bley così come su altri musicisti della scuola (come Gil Evans, George Russell e Johnny Carisi che il pianista ebbe modo di conoscere). Alla Juilliard Bley si unì alla \textit{New Jazz Society}, che si riuniva al Downbeat Club dove erano soliti suonare Parker e Charles Mingus. Quest'ultimo, in particolare, fece la conoscenza di Bley proprio in queste occasioni.\\
 Durante questo periodo, chiaramente, Bley non si fece mancare numerosi ingaggi sopratutto a Brooklyn e a Long Island\footcite[47]{cappelletti} dove cementò la sua familiarità con figure quali il già citato Parker, Jackie McLean e Donald Byrd; grazie al suo manager Monte Kay suonò inoltre per diversi mesi con Lester Young\footcite[47]{cappelletti}.\par
 Nonostante la fruttuosa permanenza a New York, Bley non abbandonò completamente Montreal, dividendo la propria vita tra le due città negli anni tra il 1950 e il 1953. Nella città canadese Bley si organizzò insieme ad altri due pianisti suoi concittadini, Keith White e Art Roberts, per dare forma al Jazz Workshop. Lo scopo dell'associazione era quello di creare un ambiente di sperimentazione e sviluppo e allo stesso tempo quello di iniettare nuova vita nella scena di Montreal chiamando illustri ospiti da oltre il confine. Si trattò di un'altra azione ``imprenditoriale'' da parte di Bley che durante la sua vita dimostrò sempre una certa inclinazione verso gli aspetti più gestionali della vita del musicista. Tra gli ospiti statunitensi ospitati dal Workshop ci furono Chuck Wayne, Sonny Rollins, Jackie McLean, Art Taylor e, nel 1953, perfino Charlie Parker. Il successo riscosso dell'associazione attirò l'attenzione della televisione canadese CBC che ne trasmise in diretta diversi concerti, compreso quello in cui prese parte Parker\footnote{Queste registrazioni sono disponibili nel disco \textbf{Charlie Parker - \textit{Montreal 1953}} [Uptown Records 1993]. Questo album, nelle tracce 9, 10, 11 e 12 contiene la prima registrazione del pianoforte di Bley, con Neil Michaud (basso), Ted Paskert (batteria), Dick Garcia (chitarra) e Brew Moore (sax tenore).}. Bley ricorda la differenza tra la scena di Montreal, in cui i musicisti esperti si facevano paternalmente carico dell'istruzione di quelli più giovani, e quella di New York. ``\textit{I giovani musicisti non si consideravano discepoli e la conoscenza dei musicisti più anziani era disponibile solo in vendita. Se volevo che Charlie Parker suonasse con me dovevo ingaggiarlo}\footcite[31]{stopping}''. A riprova della sua inclinazione manageriale, Bley si fece carico di scortare un Parker stralunato e ormai in preda alla propria tossicodipendenza da New York a Montreal (temendo che si sarebbe perso in aeroporto e sarebbe finito in Alaska). Parker deve aver apprezzato il pianismo di Bley, poichè lo richiamò in seguito per un ingaggio a Brooklyn\footcite[34]{stopping}. L'esperienza con Parker segnò profondamente Bley, che rimase profondamente colpito da come il sassofonista riuscisse a ``\textit{prevedere ciò che stava arrivando e pensare sempre in anticipo}''\footcite[35]{stopping}.\par
 Nel 1953 Charles Mingues chiamò Bley per una registrazione come direttore d'orchestra\footnote{Composta da Janet Thurlow (voce), Charles Mingus (basso), Kenny Clarke (batteria), John Lewis (pianoforte), Ernie Royal (tromba), Danny Bank (sax baritono), Willy Dennis (trombone), Eddie Caine (sax contralto e flauto), Teo Macero (sax tenore) e Jackson Wiley (violoncello).} per alcuni pezzi nel contesto di un progetto della neonata etichetta discografica di proprietà di Mingus, la Debut Records. A questo ingaggio Mingus aggiunse un'ulteriore registrazione in trio con Art Blakey. Quest'ultima prova, pubblicata come \textbf{Paul Bley - \textit{Introducing Paul Bley}} [Debut 1954] nonostante la \textit{line-up} di primo livello appare piuttosto sbiadita e priva di carica, tanto che Cappelletti insinua che fosse stata proposta da Mingus più come forma di ringraziamento per il lavoro di direzione di orchestra che come dichiarazione di fiducia nelle doti pianistiche di Bley\footcite[49]{cappelletti}.\par
@@ -66,9 +67,58 @@ Nel 1989 l'editor del \textit{Jazz Magazine} parigino Phillipe Carles organizzò
 Nel 1993 Bley ritorna eccezionalmente al sintetizzatore (questa volta, però, digitale) ventidue anni dopo il suo ultimo disco elettronico nel 1971\footcite[148]{stopping}
 . Il risultato è \textit{\textbf{Synth-Thesis}} [Postcard Records 1993]. Nello stesso anno, nonostante le proprie reticenze verso l'insegnamento, accetta una sporadica cattedra al Conservatorio del New England a Boston (lo stesso dove Giuffre aveva insegnato per anni). Tra i suoi allievi più illustri figurano la pianista giapponese Satoko Fujii e il compositore israeliano Yitzhak Yedid.\par
 Paul Bley morì il 3 gennaio 2016 nella sua casa a Stuart, in Florida, di cause naturali.
-
-
-
+\chapter{L'estetica pianistica e improvvisativa}
+\section{Sulle orme di Ornette}
+\begin{fquote}
+	Non sono mai stato un amante degli accordi. Ho sempre pensato che un accordo fosse una melodia verticale suonata simultaneamente: se un accordo non poteva essere dissezionato in maniera tale che ogni nota si allineasse a formare una melodia di senso compiuto, non era un buon accordo.\footcite[71]{stopping}
+\end{fquote}
+Una delle caratteristiche più lampanti dello stile improvvisativo di Bley risiede senza dubbio nel suo approccio, che fonde in uno stile ``polifonico''\footcite[50]{cappelletti} concezioni di natura melodica e armonica. \par
+È interessante notare come anche nella prima fase della carriera di Bley, più legata al linguaggio bebop e all'armonia tradizionale, vi fossero già delle caratteristiche tipiche anche dei lavori successivi\footcite[104]{dean}. Ad esempio, nel primo disco di Bley da solista \textit{Introducing Paul Bley} [Debut 1953] con Art Blakey e Charles Mingus, si nota già una spiccata tendenza alla manipolazione armonica. Ad esempio, l'introduzione di \textit{I Can't Get Started} (in figura \ref{fig:cant}) mostra già quello che probabilmente è l'influsso degli insegnamenti di Brant, con una chiara impronta polifonica dell'andamento delle due mani e una scelta di intervalli dal suono scuro e dissonante.
+Si tratta ancora, chiaramente, di una sperimentazione piuttosto marginale (e in ogni caso meno avanzata dei risultati che ad esempio Lennie Tristano aveva ottenuto in anni precedenti). \\
+Emerge già in ogni caso, come punto di rottura con il linguaggio melodico bebop da cui Bley ancora attinge (e attingerà in seguito) a piene mani, la tendenza a cercare ed ostentare un senso di continuità con lunghe frasi melodiche monoritmiche, spesso anche monofoniche, che si estendono spesso anche oltre la struttura di pertinenza. È interessante, a tal proposito, notare come già in questo album si riscontra la tendenza di Bley all'esporre i temi in maniera minima, senza armonizzazioni o \textit{block chords} di sorta.
+\begin{figure}[H]
+	\centering
+	\includegraphics[clip,trim=1cm 18cm 1cm 4.3cm, width=.85\textwidth]{cantgetintro.pdf}
+	\caption{Introduzione di \textit{I can't Get Started} da \textit{Introducing Paul Bley}}
+	\label{fig:cant}
+\end{figure}
+Chiaramente, l'incontro con Coleman può essere visto come la scintilla che porta davvero Bley ad abbracciare il linguaggio free; è bene ricordare, però, che il linguaggio entro cui Bley si muove è sempre prettamente jazz e il cordone ombelicale della continuità con la tradizione non viene mai davvero reciso. L'impiego delle forme bebop come l'abbassamento della quinta o della terza sugli accordi di dominante o i circondamenti delle note accordali è ricorrente e sistemico sia prima che dopo il contatto con Coleman\footcite[26]{meehan}. Bley fa spesso uso delle scale esatonali (come si può sentire in tutte le registrazioni con Jimmy Giuffre nel 1961), delle scale alterate e soprattutto del linguaggio blues.\\
+\begin{figure}[h]
+	\centering
+	\includegraphics[width=0.9\linewidth]{screenshot001}
+	\caption{Esempio di utilizzo di scala esatonale nel solo di \textit{All the things you are} nel disco \textit{Sonny Meets Hawk!}}
+	\label{fig:screenshot001}
+\end{figure}   
+In particolare, vale la pena di approfondire l'evidente ascendente che la musica di Coleman ha evidentemente esercitato per tutta la vita del pianista.
+\begin{fquote}
+	Ornette ha risolto, con una singola mossa, un problema che era in fase di accumulazione da dieci anni. Ciò consisteva nel capire cosa fare per rendere l'improvvisazione jazz più interessante. Bird era un virtuoso sui cambi armonici e dopo di lui ne sono arrivati a dozzine. Non c'era niente di rimasto da suonare: ciò che avevi era una forma canzone di trentadue battute, una più una meno, che era ormai consunta come base su cui suonare. Quindi, ciò che Ornette fece fu dire che dopo la melodia tu dovevi suonare su solo uno dei centri tonali della melodia. Scriveva i temi deliberatamente in modo tale che non ci fossero trentadue battute di cambi armonici equamente distribuiti. Suonavano come se fossero tonali, ma a un esame più approfondito della composizione le battute erano irregolari e cose così.\footcite[12]{downbeat74}
+\end{fquote}
+Anche per Coleman, così come per Bley, si può notare il suo vocabolario musicale sia in fin dei conti direttamente mutuato da quello swing, bebop e rhythm \& blues e che l'operazione effettivamente innovativa consista nel nuovo significato dato dalla combinazione di questi motivi tradizionali in nuovi pattern metrici e melodici: l'innovazione non sta quindi nella creazione di un nuovo vocabolario ma bensì nella ridefinizione della sintassi e della grammatica musicale\footcite[109]{cogswell}. Senza alcun dubbio questa tendenza era compatibile con la determinazione di Bley di rimanere, in ogni caso, nell'ambito di un campo comunicativo jazzistico. La già citata continuità nelle frasi di Bley costituisce un altro punto in comune con l'estetica di Coleman, in cui emerge una volontà quasi metodica di mettere in relazione ogni motivo con quello precedente e quello successivo\footcite[115]{cogswell}. In questo senso la continuità melodica di Bley in tutte le fasi della carriera lo ha sempre contraddistinto se messo a confronto con pianisti quali Cecil Taylor, per cui invece vi è il tentativo di scardinare la coerenza non solo del linguaggio pianistico, ma anche della tecnica. In questo senso lo stile solistico di Bley è fortemente melodico non tanto rispetto all'armonia intesa in senso boppistico (che Bley, molto spesso, sceglie di non seguire) quanto più in relazione alla continuità interna del fraseggio. In Bley vi è spesso un fluire ininterrotto di idee melodiche che vengono concatenate, elise e combinate\footcite[20]{meehan}. Armonicamente, le continue escursioni di tonalità di Bley, che però non si incanala mai in una vera e propria bitonalità o politonalità, potrebbero rientrare nel concetto di \textit{pantonalità}\footcite[73]{reti} che in contrasto con l'atonalità propriamente definita, in cui il concetto stesso di tensione e rilascio armonico è effettivamente reso nullo, mostra una continua produzione e rilascio di dissonanze senza una reale soluzione di continuità.\par
+Un altro concetto Colemaniano che ha probabilmente esercitato una forte influenza sul pianista è quello di \textit{erasure phrases}, che Bley spiega come ``frasi che erano tonali e ben temperate [alternate a] frasi che invece non lo erano deliberatamente\footcite[67]{stopping}'' con lo scopo di ``cancellare dalla tua memoria ciò che hai appena ascoltato.[...] Non sono lì per dirti qualcosa ma per farti dimenticare. Sono lì per farti sciacquare la bocca\footcite[32]{meehan}''. Ovviamente, per il pianoforte, strumento temperato per eccellenza, era impossibile riprodurre le variazioni microtonali di intonazione che caratterizzavano lo stile di Coleman; a tal proposito Bley sviluppa una metodologia personale per dare l'effetto di \textit{erasure phrase} in diversi punti dei propri soli. Come si può notare nelle trascrizioni dei soli di \textit{Ramblin'} (fig. \ref{fig:ramblin}) e \textit{All The Things You Are}, Bley spesso si trova a suonare passaggi che sono composti da frammenti di materiale tonale ad alta densità di note che, di conseguenza, eludono un centro tonale esatto e offuscano il senso armonico imitando la sensazione di disorientamento data dalle frasi non temperate suonate da Coleman. L'ambiguità riguarda anche l'aspetto ritmico: queste frasi sono spesso costituite da una scarica fitta di note senza una scansione ritmica regolare, con frequenti micro-interruzioni, inciampi, accelerazioni e ritenuti. Sono definibili come \textit{gesti}, piuttosto che vere e proprie melodie con coerenza interna, posti tra due idee melodiche dotate invece di autosufficienza e rilevanza.\par 
+A tal proposito appare inevitabile, per Bley, la riflessione sui limiti intrinseci allo strumento del pianoforte quando messo a confronto con la libertà timbrica e di intonazione del sassofono.
+\begin{fquote}
+	Spendevo tre quarti del tempo facendo accordare Ornette per vedere se sarei riuscito a fargli suonare il la a 440 Hz... Purtroppo io non avevo la stessa flessibilità che aveva lui quando si trattava di suonare un la.\footcite[62]{litweiler}
+\end{fquote}
+L'interrogazione sui limiti timbrici del pianoforte, unita alla teoria, anch'essa mutuata da Coleman, della mancanza di equivalenza dei toni a diverse ottave (per la quale una stessa nota a ottave differenti non dovrebbe essere considerata, appunto, la ``stessa'' nota\footcite[110]{dean}) avrebbe portato Bley a esplorare i suoni interni del pianoforte (tecnica usata, ad esempio, in \textit{Olhos de Gato} in \textit{\textbf{Alone, again}} [Improvising Artists 1976] in cui la cordiera del pianoforte viene pizzicata o in \textit{Touching 1} da \textit{\textbf{Mr. Joy}} [Mercury 1968] dove Bley opera una sorta di glissato sulle corde individuali). Sempre questa ricerca di nuove possibilità al di là del rigido temperamento del pianoforte sarebbe stata, con tutta probabilità, anche la chiave dell'interessamento agli strumenti elettronici negli anni '70.\par
+Bley aveva inoltre sempre mal sopportato la ripetitività della forma canzone\footnote{``{Se ci metti un minuto a suonare una sezione AABA hai già suonato tre sezioni ridondanti nel primo minuto. Tenere questo passo per quindici minuti, con tre sezioni A al minuto, è ridondanza all'estremo}.'' \cite[25]{stopping}} e aveva cercato nella dissoluzione della struttura una risposta a questa esigenza interpretativa, con il risultato che questo approccio rischiava di portare a un vicolo cieco dal momento che ``[suonare] \textit{totalmente free} non ti permetteva necessariamente di continuare [...], fine del concerto''; l'esperienza all'Hillcrest con Coleman fu in questo senso illuminante: 
+\begin{fquote}
+	suggeriva [una struttura del tipo] ABCDEFGHIJK in cui la ripetizione era un anatema. Non era completamente free perchè completamente free significava una sezione A per sempre in metamorfosi. Era una forma che aveva senso perchè tu finalmente potevi tornare alla musica scritta e il pubblico aveva qualcosa a cui aggrapparsi.\footcite{hamilton}
+\end{fquote}
+In questo modo si può dire che Coleman avesse offerto un modo di comporre spontaneamente attraverso l'improvvisazione melodie in emergenza da quella originale, generando nuovi pattern basato sulla direzione, velocità o sul materiale melodico dell'originale\footcite[305]{gluck}. La connessione biunivoca tra composizione e improvvisazione è sempre stata cara a Bley\footcite[22]{cappelletti} e non è un caso, in fin dei conti, che egli sia stato uno dei pochi pianisti con cui Coleman abbia mai suonato (oltre a Joachim Kuhn e Geri Allen). Forse il già citato approccio orizzontale all'armonia ben si sposava con la libertà richiesta da Ornette nell'accompagnamento.\par
+In particolare, questo sincretismo tra tradizione, innovazione, linguaggio blues e concezione Colemaniana si presenta all'ascoltatore analizzando gli ultimi due \textit{chorus} di solo di piano di \textit{Ramblin'} dall'omonimo album registrato in Italia nel 1966 (in figura \ref{fig:ramblin}). In questo blues dalla forma aperta (che però Bley in questo disco approccia con una maggiore fedeltà alla struttura classica a dodici battute) appare evidente come si passi con relativa disinvoltura da un vocabolario strettamente blues a invece un fraseggio lungo, spezzato e non rispettoso della struttura armonica. \par 
+\begin{figure}[h]
+	\centering
+	\includegraphics[clip,trim=1cm 13cm 1cm 3.5cm, width=\textwidth]{ramblin analysis.pdf}
+	\caption{Ultimi due chorus di solo di pianoforte in \textit{Ramblin'}.}
+	\label{fig:ramblin}
+\end{figure}
+Il blues è uno dei capisaldi dell'estetica di Coleman, per il quale costituiva sia un punto di partenza personale (come ex sassofonista di Rhythm \& Blues) sia culturale, nell'ambito di una musica che guarda a un ritorno alle radici dell'espressione afroamericana\footcite[38]{Cogswell1989}. Non stupisce quindi che anche Bley (seppur chiaramente per motivi diversi) torni così spesso e con tale limpidità al linguaggio blues. Dopotutto lui stesso riflette, a fronte della domanda di Arrigo Cappelletti sul suo rapporto con la tradizione blues:
+\begin{fquote}
+	Beh, il blues è un ottimo punto di partenza per poter suonare tutte le forme di jazz. Quindi quando suoni frasi orientate al blues sei abbastanza certo che finirai sul tracciato del jazz.\footcite[135]{cappelletti}
+\end{fquote}
+\section{In silenzio con Jimmy}
+Oltre a Coleman, l'altra figura che Bley piazza nel suo pantheon di ispirazioni è Jimmy Giuffre\footcite{hamilton}. Il fatto che il pianista ponga queste due figure, ambedue pionieri e artefici di lavori all'apparenza così radicalmente diversi, è significativo dei punti in comune tra i due artisti.\par
+L'interesse di Giuffre per la musica da camera\footcite[389]{johnston} lo 
 
 \addcontentsline{toc}{chapter}{Appendice: materiale trascritto}
 \addcontentsline{toc}{section}{All the things you are}
