--- a/Tesi pf/references.bib
+++ b/Tesi pf/references.bib
@@ -42,6 +42,63 @@
 	date = {2001},
 	publisher = {Concept Publishing Company}
 }
+@book{dean,
+	author = {Roger T. Dean},
+	title = {New Structures in jazz and improvised music since 1960},
+	date = {1992},
+	publisher = {Open University Press}
+}
+@book{reti,
+	author = {Rudolph Reti},
+	title = {Tonality Atonality Pantonality},
+	date = {1958},
+	publisher = {Barrie \& Rockliff}
+}
+@article{downbeat74,
+	author = {Joe Klee and Will Smith},
+	title = {Focus on Paul Bley},
+	journaltitle = {Downbeat January 74},
+	date = {1974}
+}
+@book{litweiler,
+	author = {John Litweiler},
+	title = {Ornette Coleman: a harmolodic life},
+	date = {1993},
+	publisher = {Quartet Books}
+}
+@article{cogswell,
+	author = {Michael Cogswell},
+	title = {Melodic organisation in two solos by Ornette Coleman},
+	journaltitle = {Annual Review of Jazz Studies, Vol. 7},
+	date = {1995}
+}
+@article{gluck,
+	author = {Bob Gluck},
+	title = {Paul Bley and Live Synthesizer Performance},
+	journaltitle = {Jazz Perspectives},
+	date = {2014}
+}	
+@article{hamilton,
+	author = {Andy Hamilton},
+	title = {Paul Bley: Time must have a stop},
+	journaltitle = {The Wire},
+	date = {2007}
+}
+@thesis{Cogswell1989,
+	author = {Michael Cogswell},
+	title = {Melodic Organization in Four Solos by Ornette Coleman},
+	type = {Thesis},
+	institution = {University of North Texas},
+	date = {1989}
+}
+@article{johnston,
+	author = {Peter Johnston},
+	title = {Teaching improvisation and the pedagogical history of Jimmy Giuffre 3},
+	journaltitle = {International Journal of Music education},
+	date = {2013}
+}
+
+
 
 
 
