--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -88,7 +88,11 @@ Let's have a fucking party!
 				\end{equation*}
 				but
 				\begin{equation*}
-					\ev\left[X^{2}(s)\right]=\ubracketthin{\ev\left[(X(s)-m(s))^{2}\right]}_{\Gamma(s,s)}+2m(s)\ev\left[X(s)-m^{2}(s)\right]
+					\ev\left[X^{2}(s)\right]=\ubracketthin{\ev\left[(X(s)-m(s))^{2}\right]}_{\Gamma(s,s)}+2m(s)\ev\left[X(s)\right]-m^{2}(s)
+				\end{equation*}
+				and
+				\begin{equation*}
+					\ev\left[X^{2}(t)\right]=\Gamma(t,t)+2m(t)\ev[X(t)]-m^{2}(t)
 				\end{equation*}
 			\end{fancyproof}
 		\end{theorem}
