txs auto checkin

--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -94,6 +94,10 @@ Let's have a fucking party!
 				\begin{equation*}
 					\ev\left[X^{2}(t)\right]=\Gamma(t,t)+2m(t)\ev[X(t)]-m^{2}(t)
 				\end{equation*}
+				and, moreover,
+				\begin{equation*}
+					\ev[X(s)X(t)]=\Gamma(s,t)-\cancel{m(t)m(s)}+m(t)\ev[X(s)]+\cancel{m(s)\ev[X(t)]}
+				\end{equation*}
 			\end{fancyproof}
 		\end{theorem}
 	\end{enumerate}
