txs auto checkin

--- a/SP/paccosp.sty
+++ b/SP/paccosp.sty
@@ -46,7 +46,7 @@
 \usepackage{movement-arrows}
 \usepackage{algorithm}
 \usepackage{algpseudocode}
-\usepackage[makeroom,thicklines]{cancel}
+\usepackage[makeroom,thicklines,red]{cancel}
 \usepackage[many]{tcolorbox}
 \tcbuselibrary{skins,raster,theorems}
 \usepackage{mathtools}
