txs auto checkin

--- a/SP/paccosp.sty
+++ b/SP/paccosp.sty
@@ -46,7 +46,7 @@
 \usepackage{movement-arrows}
 \usepackage{algorithm}
 \usepackage{algpseudocode}
-\usepackage[makeroom,thicklines,red]{cancel}
+\usepackage[makeroom,thicklines]{cancel}
 \usepackage[many]{tcolorbox}
 \tcbuselibrary{skins,raster,theorems}
 \usepackage{mathtools}
@@ -64,6 +64,7 @@
 \pgfplotsset{compat=1.16}
 \usepgfplotslibrary{fillbetween}
 
+\renewcommand{\CancelColor}{\color{red}}
 
 \newcounter{dummy}
 
