txs auto checkin

--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -104,7 +104,7 @@ Let's have a fucking party!
 					&=\Gamma(s,s)+\Gamma(t,t)-2\Gamma(s,t)+m^{2}(t)+m^{2}(s)-2m(t)m(s)\\
 					&=\Gamma(s,s)+\Gamma(t,t)-2\Gamma(s,t)+\left[m(t)-m(s)\right]^{2}.
 				\end{align*}
-				Hence, if $m(t)$ is continuous and $\Gamma(s,t)$ is continuous for $s=t$ then 
+				Hence, if $m(t)$ is continuous and $\Gamma(s,t)$ is continuous for $s=t$ then the process is continuous.
 				\begin{equation*}
 					\ev\left[|X(s)-X(t)|^{2}\right]\to0.
 				\end{equation*}
@@ -112,6 +112,13 @@ Let's have a fucking party!
 			\end{fancyproof}
 		\end{theorem}
 	\end{enumerate}
+	\begin{figure}
+		\centering
+		\includegraphics[width=0.5\linewidth]{img/screenshot001}
+		\caption{Sei un fallito.}
+		\label{fig:screenshot001}
+	\end{figure}
+	
 \clearpage
 \listoffigures  
 \end{document} 
