txs auto checkin

--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -25,8 +25,19 @@ Let's have a fucking party!
 		\pr(X(t)<x|\F_{s})=\pr(X(t)<x|X_{s}).
 	\end{equation*}
 	This gives us a sample path like this:
-	IMMAGINE
-	We want to think, though, about a continuous space and time process: IMMAGINE
+	\begin{figure}[H]
+		\centering
+		\includegraphics[width=0.7\linewidth]{img/screenshot003}
+		\caption{Fucking hell.}
+		\label{fig:screenshot003}
+	\end{figure}
+	We want to think, though, about a continuous space and time process: 
+	\begin{figure}[H]
+		\centering
+		\includegraphics[width=0.7\linewidth]{img/screenshot004}
+		\caption{Leaning like my academic career.}
+		\label{fig:screenshot004}
+	\end{figure}
 	How can we define the continuity of the sample paths? and how can we check this property? There are some possible definitions of continuity. To control for their robustness we check whether according to each of these definitions the Poisson process, a discrete process, is correctly classified as non continuous.
 	\begin{definition}
 		A stochastic process $\{M(t)\}$ is said to be a \emph{counting process} if:
@@ -54,7 +65,13 @@ Let's have a fucking party!
 			\item we have $$\pr(N(t)=k)=\frac{(\lambda t)^{k}}{k!}e^{-\lambda t}\qquad\text{for } k=0,1,\ldots$$
 		\end{enumerate}
 	\end{definition}
-	IMMAGINE\\
+	\begin{figure}[h]
+		\centering
+		\includegraphics[width=0.7\linewidth]{img/screenshot002}
+		\caption{I am very good at drawing straight lines.}
+		\label{fig:screenshot002}
+	\end{figure}
+	
 	The inter-arrival times are i.i.d. \rv s distributed as
 	\begin{equation*}
 		T_i\distexp{\lambda}.
@@ -112,13 +129,12 @@ Let's have a fucking party!
 			\end{fancyproof}
 		\end{theorem}
 	\end{enumerate}
-	\begin{figure}
+	\begin{figure}[h]
 		\centering
 		\includegraphics[width=0.5\linewidth]{img/screenshot001}
 		\caption{Sei un fallito.}
 		\label{fig:screenshot001}
 	\end{figure}
-	
 \clearpage
 \listoffigures  
 \end{document} 
