--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -121,11 +121,15 @@ Let's have a fucking party!
 					&=\Gamma(s,s)+\Gamma(t,t)-2\Gamma(s,t)+m^{2}(t)+m^{2}(s)-2m(t)m(s)\\
 					&=\Gamma(s,s)+\Gamma(t,t)-2\Gamma(s,t)+\left[m(t)-m(s)\right]^{2}.
 				\end{align*}
-				Hence, if $m(t)$ is continuous and $\Gamma(s,t)$ is continuous for $s=t$ then the process is continuous.
+				Hence, if $m(t)$ is continuous and $\Gamma(s,t)$ is continuous for $s=t$ then the process is continuous because we have:
+				\begin{itemize}
+					\item $[m(t)-m(s)]^{2}\to0$ since it is a continuous function;
+					\item $\Gamma(s,s)+\Gamma(t,t)-2\Gamma(s,t)$ that becomes $\Gamma(t,t)+\Gamma(t,t)-2\Gamma(t,t)=0$
+				\end{itemize}
 				\begin{equation*}
 					\ev\left[|X(s)-X(t)|^{2}\right]\to0.
 				\end{equation*}
-				If this holds for $m(t)$ and $\Gamma(t,t)$
+				If this holds for $m(t)$ and $\Gamma(t,t)$ then it is 
 			\end{fancyproof}
 		\end{theorem}
 	\end{enumerate}
