txs auto checkin

--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -124,8 +124,9 @@ Let's have a fucking party!
 				Hence, if $m(t)$ is continuous and $\Gamma(s,t)$ is continuous for $s=t$ then the process is continuous because we have:
 				\begin{itemize}
 					\item $[m(t)-m(s)]^{2}\to0$ since it is a continuous function;
-					\item $\Gamma(s,s)+\Gamma(t,t)-2\Gamma(s,t)$ that becomes $\Gamma(t,t)+\Gamma(t,t)-2\Gamma(t,t)=0$
+					\item $\Gamma(s,s)+\Gamma(t,t)-2\Gamma(s,t)$ that becomes $\Gamma(t,t)+\Gamma(t,t)-2\Gamma(t,t)=0$.
 				\end{itemize}
+				I'd like to add that dear prof. Sacerdote didn't explain this last little point. Thank you! So now whe have
 				\begin{equation*}
 					\ev\left[|X(s)-X(t)|^{2}\right]\to0.
 				\end{equation*}
