txs auto checkin

--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -130,7 +130,7 @@ Let's have a fucking party!
 				\begin{equation*}
 					\ev\left[|X(s)-X(t)|^{2}\right]\to0.
 				\end{equation*}
-				If this holds for $m(t)$ and $\Gamma(t,t)$ then it is 
+				If this holds for $m(t)$ and $\Gamma(t,t)$ then it is continuous in mean squares.
 			\end{fancyproof}
 		\end{theorem}
 	\end{enumerate}
