txs auto checkin

--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -133,6 +133,9 @@ Let's have a fucking party!
 				If this holds for $m(t)$ and $\Gamma(t,t)$ then it is continuous in mean squares.
 			\end{fancyproof}
 		\end{theorem}
+		\begin{remark}
+			A process continuous in mean \faSquare
+		\end{remark}
 	\end{enumerate}
 	\begin{figure}[h]
 		\centering
