txs auto checkin

--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -134,7 +134,7 @@ Let's have a fucking party!
 			\end{fancyproof}
 		\end{theorem}
 		\begin{remark}
-			A process continuous in mean \faSquare[regular]
+			A process continuous in mean \faSquare[regular] (get it?) is continuous in probability (use Chebyshev\footnote{Like use him? As a person? He is dead.}).
 		\end{remark}
 	\end{enumerate}
 	\begin{figure}[h]
