txs auto checkin

--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -136,6 +136,15 @@ Let's have a fucking party!
 		\begin{remark}
 			A process continuous in mean \faSquare[regular] (get it?) is continuous in probability (use Chebyshev\footnote{Like use him? As a person? He is dead.}).
 		\end{remark}
+		Is the Poisson process continuous in mean \faSquare[regular] (and also in probability)? We know that
+		\begin{equation*}
+			m(t)=\lambda t
+		\end{equation*}
+		and 
+		\begin{align*}
+			\Gamma(s,t)&=\ev[(N(t)-m(t))(N(s)-m(s))]\\
+			&=\ev[N(t)N(s)]-2m(t)m(s)+m(t)m(s).
+		\end{align*}
 	\end{enumerate}
 	\begin{figure}[h]
 		\centering
