txs auto checkin

--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -143,7 +143,9 @@ Let's have a fucking party!
 		and 
 		\begin{align*}
 			\Gamma(s,t)&=\ev[(N(t)-m(t))(N(s)-m(s))]\\
-			&=\ev[N(t)N(s)]-2m(t)m(s)+m(t)m(s).
+			&=\ev[N(t)N(s)]-2m(t)m(s)+m(t)m(s)\\
+			&\underset{t>s}{=}\ev[(N(t)-m(t))(N(s)-m(s))]\\
+			&=\ev[(N(t)-N(s))N(s)]+\ev\left[N^{2}(s)\right]+m(t)m(s)
 		\end{align*}
 	\end{enumerate}
 	\begin{figure}[h]
