txs auto checkin

--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -145,7 +145,9 @@ Let's have a fucking party!
 			\Gamma(s,t)&=\ev[(N(t)-m(t))(N(s)-m(s))]\\
 			&=\ev[N(t)N(s)]-2m(t)m(s)-m(t)m(s)\\
 			&\underset{t>s}{=}\ev[(N(t)-2N(s)+N(s))N(s)]-m(t)m(s)\\
-			&=\ev[(N(t)-N(s))N(s)]+\ev\left[N^{2}(s)\right]-m(t)m(s)
+			&=\ev[(N(t)-N(s))N(s)]+\ev\left[N^{2}(s)\right]-m(t)m(s)\\
+			&=\ubracketthin{\ev[N(t)-N(s)]}_{
+			\lambda(t-s)}\ubracketthin{\ev(N(s))}_{\lambda s}+\ev\left[N^{2}(s)\right]-\ubracketthin{m(t)}_{\lambda t}\ubracketthin{m(s)}_{\lambda s},
 		\end{align*}
 	\end{enumerate}
 	\begin{figure}[h]
