txs auto checkin

--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -147,7 +147,9 @@ Let's have a fucking party!
 			&\underset{t>s}{=}\ev[(N(t)-2N(s)+N(s))N(s)]-m(t)m(s)\\
 			&=\ev[(N(t)-N(s))N(s)]+\ev\left[N^{2}(s)\right]-m(t)m(s)\\
 			&=\ubracketthin{\ev[N(t)-N(s)]}_{
-			\lambda(t-s)}\ubracketthin{\ev(N(s))}_{\lambda s}+\ev\left[N^{2}(s)\right]-\ubracketthin{m(t)}_{\lambda t}\ubracketthin{m(s)}_{\lambda s},
+			\lambda(t-s)}\ubracketthin{\ev(N(s))}_{\lambda s}+\ev\left[N^{2}(s)\right]-\ubracketthin{m(t)}_{\lambda t}\ubracketthin{m(s)}_{\lambda s}\\
+			&=\lambda^{2}(\cancel{t}-s)s-\cancel{\lambda^{2}ts}+\ev\left[N^{2}(s)\right]\\
+			&=-\lambda^{2}s^{2}+\ubracketthin{\var N(s)}_{\lambda s}+\ubracketthin{\left[\ev\left[N(s)\right]\right]^{2}}_{\lambda^{2}s^{2}}
 		\end{align*}
 	\end{enumerate}
 	\begin{figure}[h]
