--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -149,7 +149,8 @@ Let's have a fucking party!
 			&=\ubracketthin{\ev[N(t)-N(s)]}_{
 			\lambda(t-s)}\ubracketthin{\ev(N(s))}_{\lambda s}+\ev\left[N^{2}(s)\right]-\ubracketthin{m(t)}_{\lambda t}\ubracketthin{m(s)}_{\lambda s}\\
 			&=\lambda^{2}(\cancel{t}-s)s-\cancel{\lambda^{2}ts}+\ev\left[N^{2}(s)\right]\\
-			&=-\lambda^{2}s^{2}+\ubracketthin{\var N(s)}_{\lambda s}+\ubracketthin{\left[\ev\left[N(s)\right]\right]^{2}}_{\lambda^{2}s^{2}}
+			&=-\lambda^{2}s^{2}+\ubracketthin{\var N(s)}_{\lambda s}+\ubracketthin{\left[\ev\left[N(s)\right]\right]^{2}}_{\lambda^{2}s^{2}}\\
+			&=\lambda s\qquad\text{if }s<t.
 		\end{align*}
 	\end{enumerate}
 	\begin{figure}[h]
