txs auto checkin

--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -159,6 +159,7 @@ Let's have a fucking party!
 		\caption{Sei un fallito.}
 		\label{fig:screenshot001}
 	\end{figure}
+	So $\Gamma(s,t)=\lambda\min(s,t)$ is continuous on diagonal and $m(t)=\lambda t$ is also continuous... but this would mean that Poisson processes are continuous! Which they shouldn't be! Do I care? No!
 \clearpage
 \listoffigures  
 \end{document} 
