txs auto checkin

--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -159,7 +159,10 @@ Let's have a fucking party!
 		\label{fig:screenshot001}
 	\end{figure}
 	So $\Gamma(s,t)=\lambda\min(s,t)$ is continuous on diagonal and $m(t)=\lambda t$ is also continuous... but this would mean that Poisson processes are continuous! Which they shouldn't be! Do I care? No!
-	\item \emph{Almost sure continuity}:
+	\item \emph{Almost sure continuity}: we can ask, as a requirement, that
+	\begin{equation*}
+		\pr\left(\lim_{s\to t}N(s)=N(t)\right)=1.
+	\end{equation*}
 \end{enumerate}
 \clearpage
 \listoffigures  
