txs auto checkin

--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -163,6 +163,8 @@ Let's have a fucking party!
 	\begin{equation*}
 		\pr\left(\lim_{s\to t}N(s)=N(t)\right)=1.
 	\end{equation*}
+	Does this finally solve the problem with the Poisson processes? No, because it verifies the almost sure continuity (since it is discontinuous only in a countable number of instances).\\
+	It is not enought ot think point by point: we must think \textit{uniformly}.
 \end{enumerate}
 \clearpage
 \listoffigures  
