txs auto checkin

--- a/SP/sp.tex
+++ b/SP/sp.tex
@@ -165,6 +165,12 @@ Let's have a fucking party!
 	\end{equation*}
 	Does this finally solve the problem with the Poisson processes? No, because it verifies the almost sure continuity (since it is discontinuous only in a countable number of instances).\\
 	It is not enought ot think point by point: we must think \textit{uniformly}.
+	\begin{definition}
+		A stochastic process $\{X(t)\}$ has almost sure continuous sample paths if, with probability 1, $X(t)$ is a continuous function, that is:
+		\begin{equation*}
+			\pr(X(t)\text{ has continuous samples})=1
+		\end{equation*}
+	\end{definition}
 \end{enumerate}
 \clearpage
 \listoffigures  
