--- a/SP/paccosp.sty
+++ b/SP/paccosp.sty
@@ -131,9 +131,7 @@
 			enhanced, 
 			breakable,
 			sharp corners,
-			title style={right color=LemonChiffon1,left color=Aquamarine4!90!black},
-			frame style={right color=SpringGreen4,left color=Turquoise4},
-			colframe=white, coltitle=white, colbacktitle=SkyBlue4,
+			colframe=OliveDrab3, coltitle=white, colbacktitle=SkyBlue4,
 			colback=LemonChiffon1,
 			titlerule=0mm,
 			separator sign={:},
