txs auto checkin

--- a/SP/paccosp.sty
+++ b/SP/paccosp.sty
@@ -131,7 +131,8 @@
 			enhanced, 
 			breakable,
 			sharp corners,
-			colframe=OliveDrab3, coltitle=white, colbacktitle=SkyBlue4,
+			colframe=Chartreuse4, 
+			coltitle=Chartreuse4, colbacktitle=SkyBlue4,
 			colback=LemonChiffon1,
 			titlerule=0mm,
 			separator sign={:},
