txs auto checkin

--- a/SP/paccosp.sty
+++ b/SP/paccosp.sty
@@ -132,8 +132,8 @@
 			breakable,
 			sharp corners,
 			colframe=Chartreuse4, 
-			coltitle=Chartreuse4, colbacktitle=SkyBlue4,
-			colback=LemonChiffon1,
+			coltitle=Chartreuse4, colbacktitle=white,
+			colback=LemonChiffon3,
 			titlerule=0mm,
 			separator sign={:},
 			description formatter=\newline,
