txs auto checkin

--- a/SP/paccosp.sty
+++ b/SP/paccosp.sty
@@ -135,6 +135,7 @@
 			coltitle=Chartreuse4, colbacktitle=white,
 			colback=LemonChiffon3,
 			titlerule=0mm,
+			fonttitle=\bfseries
 			separator sign={:},
 			description formatter=\newline,
 			theorem hanging indent/.try=0pt,
