txs auto checkin

--- a/SP/paccosp.sty
+++ b/SP/paccosp.sty
@@ -134,8 +134,8 @@
 			colframe=Chartreuse4, 
 			coltitle=Chartreuse4, colbacktitle=white,
 			colback=LemonChiffon3,
-			titlerule=0mm,
-			fonttitle=\bfseries
+			titlerule=10mm,
+			fonttitle=\bfseries,
 			separator sign={:},
 			description formatter=\newline,
 			theorem hanging indent/.try=0pt,
