--- a/SP/paccosp.sty
+++ b/SP/paccosp.sty
@@ -134,7 +134,7 @@
 			colframe=Chartreuse4, 
 			coltitle=Chartreuse4, colbacktitle=white,
 			colback=LemonChiffon3,
-			titlerule=5pt,
+			titlerule=pt,
 			fonttitle=\bfseries,
 			separator sign={:},
 			description formatter=\newline,
