txs auto checkin

--- a/SP/paccosp.sty
+++ b/SP/paccosp.sty
@@ -103,8 +103,8 @@
 	 breakable, sharp corners,
 		colframe=white, coltitle=white, 
 		fonttitle=\bfseries,
-		colbacktitle=SpringGreen3!34,
-		colback=SpringGreen4,
+		colbacktitle=SpringGreen4,
+		colback=DarkSeaGreen3!70!LemonChiffon3,
 		titlerule=1pt,
 		separator sign={:},
 		description formatter=\newline,
